# auth-service

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2018-09-25-195340_create_users/: up.sql
migrations/2018-09-25-195351_create_roles/: up.sql
migrations/2018-10-07-114958_create_users/: down.sql  up.sql
src/: .env  db.rs  error.rs  lib.rs  logging.rs  main.rs  migration.rs  models.rs  pass_funcs.rs  schema.rs  service.rs  test.rs
