[package]
name = "auth-service"
version = "0.1.0"
authors = ["Ole Martin Ruud <barskern@outlook.com>"]
edition = "2018"

[dependencies]
# Library to generate password hashes with salts
#
# A pepper must be added to the password before sending
# it into the `pbkdf2_simple` function
pbkdf2 = "0.2.3"
serde_json = "1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
diesel = { version = "1.3.0", features = ["mysql"] }
dotenv = "0.10"
regex = "1.0.5"
chrono = "0.4.6"
