[package]
name = "auth-service"
version = "0.1.0"
authors = ["Knut <knutgro@stud.ntnu.no>"]

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
datatypes = { git = "https://github.com/Bitspleaseee/datatypes.git" }
diesel = { version = "1.3.0", features = ["mysql", "r2d2"] }
dotenv = "0.10"
failure = "0.1.2"
fern = "0.5.6"
log = "0.4.5"
pbkdf2 = "0.2.3"
regex = "1.0.5"
serde = "1.0"
serde_derive = "1.0.79"
tarpc = { git = "https://github.com/google/tarpc.git", branch = "master" }
tarpc-plugins = { git = "https://github.com/google/tarpc", rev = "5e4b97e" }
tokio-core = "0.1.17"
rustyline = "2.1.0"
rand = "0.5.5"
base64 = "0.9.3"
futures = "0.1.24"
futures-cpupool = "0.1.8"